// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Endorsement should fail when endorsement is not a string 1`] = `
Object {
  "text": [CastError: Cast to String failed for value "[]" at path "text"],
}
`;

exports[`Endorsement should fail when missing props 1`] = `
Object {
  "text": [ValidatorError: Path \`text\` is required.],
}
`;
